@@ -45,7 +45,7 @@ current_version = 0.12.1
 
 [flake8]
 extend-ignore = E203,F401,W503,W504
-exclude = __init__.py,*.pyc,tests.py
+exclude = __init__.py,*.pyc,tests.py,build,dist
 paths = ./holidays/ ./tests/
 
 [rstcheck]
