@@ -9,6 +9,7 @@ Released ?????? ??, ????
 - Refactoring / cleanups / code and naming reviews (mborsetti)
 - Support for Uzbekistan #593 (slako, dr-p)
 - Wrong year expansion fix #586, #606 (mborsetti, dr-p)
+- Italy fixes/improvements #617, #614 (energywave)
 - Spain improvements #580,#603 (gtrabanco, dr-p)
 - UAE updates (weekend change) #609 (marcomasulli, dr-p)
 - India updates #548 (mborsetti)
